--- a/config/r66s.config
+++ b/config/r66s.config
@@ -105,6 +105,13 @@ CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-app-zerotier=y
+
+CONFIG_PACKAGE_luci-app-docker=y
+CONFIG_PACKAGE_luci-app-dockerman=y
+CONFIG_PACKAGE_luci-app-aliyundrive-fuse=y
+CONFIG_PACKAGE_aliyundrive-fuse=y
+CONFIG_PACKAGE_luci-i18n-aliyundrive-fuse-zh-cn=y
+
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-i18n-bypass-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-cpufreq-zh-cn=y
