--- a/config/r66s.config
+++ b/config/r66s.config
@@ -8,7 +8,9 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=450
 CONFIG_LIBMBEDTLS_HAVE_ARMV8CE_AES=y
 CONFIG_HAS_TESTING_KERNEL=y
 CONFIG_TESTING_KERNEL=y
-CONFIG_LINUX_5_15=y
+CONFIG_LINUX_4_19=y
+#CONFIG_LINUX_5_15=y
+#CONFIG_LINUX_6_0=y
 
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_adguardhome=y
@@ -106,8 +108,8 @@ CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 
-CONFIG_PACKAGE_luci-app-docker=y
 CONFIG_PACKAGE_luci-app-dockerman=y
+CONFIG_PACKAGE_docker-compose=y
 CONFIG_PACKAGE_luci-app-aliyundrive-fuse=y
 CONFIG_PACKAGE_aliyundrive-fuse=y
 CONFIG_PACKAGE_luci-i18n-aliyundrive-fuse-zh-cn=y
