--- a/.github/workflows/r66s.yml
+++ b/.github/workflows/r66s.yml
@@ -141,7 +141,7 @@ jobs:
         echo "::set-output name=release_tag::$(date +"%Y.%m.%d")-Lean3"
         echo "::set-output name=release_date::$(date +"%Y.%m.%d")"
         touch release.txt
-        echo "后台地址：192.168.1.252" >> release.txt
+        echo "请自行测试固件可用性" >> release.txt
         echo "::set-output name=status::success"
     - name: Upload firmware to release
       uses: softprops/action-gh-release@v1
@@ -149,7 +149,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GIT_USER_TOKEN }}
       with:
-        name: ${{ steps.tag.outputs.release_date }} FastRhino-R66S-linux-正式版
+        name: ${{ steps.tag.outputs.release_date }} FastRhino-R66S
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
