--- a/.github/workflows/r66s.yml
+++ b/.github/workflows/r66s.yml
@@ -149,7 +149,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GIT_USER_TOKEN }}
       with:
-        name: ${{ steps.tag.outputs.release_date }} FastRhino-R66S
+        name: ${{ steps.tag.outputs.release_date }} FastRhino-R66S-main
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
