--- a/.github/workflows/r66s.yml
+++ b/.github/workflows/r66s.yml
@@ -24,9 +24,9 @@ env:
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/r66s.config
-  CONFIG_FILE: config/r66s_4.19.config
-  CONFIG_FILE: config/r66s_5.15.config
-  CONFIG_FILE: config/r66s_6.0.config
+  #CONFIG_FILE: config/r66s_4.19.config
+  #CONFIG_FILE: config/r66s_5.15.config
+  #CONFIG_FILE: config/r66s_6.0.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
