--- a/.github/workflows/r66s_4.19.yml
+++ b/.github/workflows/r66s_4.19.yml
@@ -144,7 +144,7 @@ jobs:
         echo "请自行测试固件可用性" >> release.txt
         echo "::set-output name=status::success"
     - name: Upload firmware to release
-      uses: softprops/action-gh-release@4.19
+      uses: softprops/action-gh-release@v1
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
         GITHUB_TOKEN: ${{ secrets.GIT_USER_TOKEN }}
