--- a/.github/workflows/Rockchip R66s OpenWrt.yml
+++ b/.github/workflows/Rockchip R66s OpenWrt.yml
@@ -15,7 +15,7 @@ on:
 env:
   SOURCE_URL: https://github.com/coolsnowwolf/lede
   SOURCE_BRANCH: master
-  CONFIG_FILE: configs/rockchip.config
+  CONFIG_FILE: configs/r66s.config
   EXTRA_CONFIG: configs/extra.config
   DIY_SCRIPT: diy-script.sh
   TOOLCHAIN_TAG: Toolchain
